// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds aria-hidden when specified 1`] = `
<span>
  <button
    aria-describedby={null}
    aria-disabled={null}
    aria-hidden="true"
    className=""
    id="sb"
    onClick={[Function]}
    style={
      Object {
        "zIndex": null,
      }
    }
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</span>
`;

exports[`renders 1`] = `
<span>
  <button
    aria-describedby={null}
    aria-disabled={null}
    aria-hidden={null}
    className=""
    id="sb"
    onClick={[Function]}
    style={
      Object {
        "zIndex": null,
      }
    }
    type="button"
  >
    <span>
      I am a Sticky Button
    </span>
  </button>
</span>
`;
